--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
+# ===============================================
 # RABBITMW ENVIORMENTS
+# ===============================================
 RABBITMQ_HOST=
 RABBITMQ_USER=
 RABBITMQ_PASS=
@@ -6,20 +8,42 @@ RABBITMQ_URL=
 RABBITMQ_PORT=
 QUEUE_NAME=
 
+# ===============================================
 # MONGODB ENVIORMENTS
+# ===============================================
 MONGO_USERNAME=
 MONGO_PASSWORD=
 MONGO_URL=
 
-# BACK NESTJS
+# ===============================================
+# BACKEND (NESTJS)
+# ===============================================
 PORT=
 NESTJS_API_URL_POST=
+MONGO_URL=
+JWT_SECRET=
+JWT_EXPIRES_IN=
+EMAIL_DEFAULT=
+PASSWORD_DEFAULT=
+USERNAME_DEFAUTL=
+API_GEMINI_KEY =
 
+# ===============================================
 #PYTHON COLLECTOR-SERVICE
+# ===============================================
 API_URL=
 LATITUDE=
 LONGITUDE=
 WEATHER_CITY=
+WEATHER_STATE=
+WEATHER_COUNTRY=
 
-#GLOBAL
-MAX_RETRIES=
+# ===============================================
+# FRONTEND (VITE/REACT)
+# =Variaveis para o frontend devem começar com VITE_
+# ===============================================
+BASE_URL="http://localhost:5443"
+
+
+#GLOBAL 
+MAX_RETRIES="3"
