--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,27 +41,33 @@ services:
       - app-network
   backend:
     build:
-      context: ./back-nest
+      context: ./backend
       dockerfile: Dockerfile
     container_name: backend
     env_file:
-      - ./back-nest/.env
+      - ./.env
     ports:
       - "5443:5443"
     depends_on:
       mongoDB:
         condition: service_healthy
       rabbitmq: 
-        condition: service_healthy  
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS --retry 3 http://127.0.0.1:5443/hello || exit 1"]
+      interval: 15s
+      timeout: 10s
+      retries: 10
+      start_period: 300s
     volumes:
-      - ./back-nest:/app
+      - ./backend:/app
     networks:
       - app-network  
   collectorpython:
     build:
       context: ./collector-service
       dockerfile: Dockerfile
-    container_name: collectorPython
+    container_name: collector
     env_file:
       - .env
     ports:
@@ -85,6 +91,8 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
+      backend:
+        condition: service_healthy
     volumes:
       - ./worker:/app
     networks:
@@ -96,10 +104,13 @@ services:
     container_name: frontend
     ports:
       - "5173:5173"
+    env_file:
+      - ./.env  
     depends_on:
       - backend
     volumes:
       - ./frontend/weather-app:/app
+      - frontend_node_modules:/app/node_modules
     networks:
       - app-network
 
@@ -107,6 +118,7 @@ volumes:
   rabbitmq_data:
   rabbitmq_log:
   mongo_data:  
+  frontend_node_modules:
 
 networks:
   app-network:  
