--- a/frontend/weather-app/Dockerfile
+++ b/frontend/weather-app/Dockerfile
@@ -4,10 +4,12 @@ WORKDIR /app
 
 COPY package*.json ./
 
+RUN rm -rf node_modules 
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 5173
 
-CMD ["npm", "run", "dev"]
+CMD ["npm","run","dev","--","--host","0.0.0.0"]
